<resources>
    <string name="app_name">Smartspace for Admin</string>
    <string name="mail">Mail</string>
    <string name="smartspcae">Smartspcae</string>
    <string name="login">Login</string>
    <string name="please_wait_login">Please wait...\nTry to login</string>
    <string name="empty_field">One or more fields is empty</string>
    <string name="not_admin">You aren\'t admin in this smartspace</string>
    <string name="again_later">Please try again later</string>
    <string name="import_data">Import data</string>
    <string name="export_data">Export data</string>
    <string name="points">Points: </string>
    <string name="logout">Logout</string>
    <string name="please_wait">Please wait</string>
    <string name="users">Users</string>
    <string name="elements">Elements</string>
    <string name="actions">Actions</string>
    <string name="empty_data">The data is empty</string>
    <string name="read_permission">The app need permission to read in order to find your import file from the phone</string>
    <string name="storage_access">Storage access</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="import_succeed">Import has succeed</string>
    <string name="export_data_file">Export</string>
    <string name="again_later_and_recheck">Plase try again later or check your file is valid</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_logout">Are you sure?</string>
    <string name="ip_str">IP address</string>
    <string name="port_str">Port</string>
</resources>
